add jquery + jason call to movies

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>release 1</title>
-    <p>In bright ad day in dark as night no evil...</p>
+    <style>
+        h1 {
+            color: purple
+        }
+    </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="js/site.js"></script>
 </head>
+
 <body>
-    <p>This is release 1</p>
+<button id="btnloadMovies">Load Movies</button>
 </body>
+
 </html>
